--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "firebase-admin": "^12.6.0"
+    "firebase-admin": "^12.6.0",
+    "mongodb": "^6.10.0"
   }
 }
